manifests/postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data  # Ruta donde se almacenan los datos
          name: postgres-data  # Nombre del volumen a montar
      volumes:
      - name: postgres-data  # Define el volumen que será montado
        persistentVolumeClaim:
          claimName: postgres-pvc  # PVC que solicita un volumen persistente
