manifests/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      name: app-p
      port: 80
      targetPort: 5000
  type: LoadBalancer
