manifests/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: db
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: db
      port: 5432
      targetPort: 5432
