manifests/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: cache
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      name: cache
      port: 6379
      targetPort: 6379
